@@ -238,8 +238,10 @@ namespace libtorrent
 
 				if (d->processing)
 				{
-					// TODO: this could be both checking or allocating
-					st.state = torrent_status::checking_files;
+					if (d->torrent_ptr->is_allocating())
+						st.state = torrent_status::allocating;
+					else
+						st.state = torrent_status::checking_files;
 				}
 				else
 					st.state = torrent_status::queued_for_checking;
